--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </nav>
         <div class="one">
             <h1>FANTA</h1>
-            <img src="/assets/orange2.png" id="orangecut">
-            <img src="/assets/fanta.png" id="fanta">
-            <img src="/assets/orange.webp" id="orange">
-            <img src="/assets/leaf.webp" id="leaf">
-            <img src="/assets/leaf2.png" id="leaf2">
-            <img src="/assets/coconoutleaf.png" id="leaf3">
+            <img src="/orange2.png" id="orangecut">
+            <img src="/fanta.png" id="fanta">
+            <img src="/orange.webp" id="orange">
+            <img src="/leaf.webp" id="leaf">
+            <img src="/leaf2.png" id="leaf2">
+            <img src="/coconoutleaf.png" id="leaf3">
         </div>
         <div class="two">
             <div class="lft-two">
@@ -41,8 +41,8 @@
         </div>
         <div class="three">
             <div class="card">
-                <img class="lemon lemon1" src="/assets/lemon.webp">
-                <img id="cocacola" src="/assets/cocacola.png">
+                <img class="lemon lemon1" src="/lemon.webp">
+                <img id="cocacola" src="/cocacola.png">
                 <h1>Cocacola</h1>
                 <button>Buy Now</button>
             </div>
@@ -52,8 +52,8 @@
                 <button>Buy Now</button>
             </div>
             <div class="card">
-                <img class="lemon" src="/assets/lemon.webp">
-                <img id="pepsi" src="/assets/pepsi.png">
+                <img class="lemon" src="/lemon.webp">
+                <img id="pepsi" src="/pepsi.png">
                 <h1>Pepsi</h1>
                 <button>Buy Now</button>
             </div>
