--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </nav>
         <div class="one">
             <h1>FANTA</h1>
-            <img src="/orange2.png" id="orangecut">
-            <img src="/fanta.png" id="fanta">
-            <img src="/orange.webp" id="orange">
-            <img src="/leaf.webp" id="leaf">
-            <img src="/leaf2.png" id="leaf2">
-            <img src="/coconoutleaf.png" id="leaf3">
+            <img src="orange2.png" id="orangecut">
+            <img src="fanta.png" id="fanta">
+            <img src="orange.webp" id="orange">
+            <img src="leaf.webp" id="leaf">
+            <img src="leaf2.png" id="leaf2">
+            <img src="coconoutleaf.png" id="leaf3">
         </div>
         <div class="two">
             <div class="lft-two">
